@@ -2086,6 +2086,10 @@ namespace aux {
 			//    instead of the actual local listening port.
 			announce_port,
 
+			// Configures the variance for I2P inbound and outbound tunnel lengths [-7..7]
+			i2p_inbound_length_variance,
+			i2p_outbound_length_variance,
+
 			max_int_setting_internal
 		};
 
