@@ -2378,6 +2378,8 @@ namespace {
 			, m_settings.get_int(settings_pack::i2p_outbound_quantity)
 			, m_settings.get_int(settings_pack::i2p_inbound_length)
 			, m_settings.get_int(settings_pack::i2p_outbound_length)
+			, m_settings.get_int(settings_pack::i2p_inbound_length_variance)
+			, m_settings.get_int(settings_pack::i2p_outbound_length_variance)
 		};
 		m_i2p_conn.open(m_settings.get_str(settings_pack::i2p_hostname)
 			, m_settings.get_int(settings_pack::i2p_port)
